--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Rent Car</title>
+    <title>Pizza Order</title>
   </head>
   <body>
     <center>
